--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "close-love",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://alicepalamis.github.io/close-love",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
